; ModuleID = '/home/carl/AnghaBench/glfw/tests/extr_glfwinfo.c_list_vulkan_instance_extensions.c'
source_filename = "/home/carl/AnghaBench/glfw/tests/extr_glfwinfo.c_list_vulkan_instance_extensions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i8*, i32 }

@.str = private unnamed_addr constant [29 x i8] c"Vulkan instance extensions:\0A\00", align 1
@.str.1 = private unnamed_addr constant [23 x i8] c" %s (spec version %u)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @list_vulkan_instance_extensions to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @list_vulkan_instance_extensions() #0 {
  %1 = alloca i64, align 8
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i64, align 8
  %4 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  %5 = call i32 @vkEnumerateInstanceExtensionProperties(i32* null, i64* %1, %struct.TYPE_5__* null)
  %6 = load i64, i64* %1, align 8
  %7 = call %struct.TYPE_5__* @calloc(i64 %6, i32 16)
  store %struct.TYPE_5__* %7, %struct.TYPE_5__** %2, align 8
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %9 = call i32 @vkEnumerateInstanceExtensionProperties(i32* null, i64* %1, %struct.TYPE_5__* %8)
  store i64 0, i64* %3, align 8
  br label %10

10:                                               ; preds = %26, %0
  %11 = load i64, i64* %3, align 8
  %12 = load i64, i64* %1, align 8
  %13 = icmp ult i64 %11, %12
  br i1 %13, label %14, label %29

14:                                               ; preds = %10
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %16 = load i64, i64* %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i64 %16
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 0
  %19 = load i8*, i8** %18, align 8
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %21 = load i64, i64* %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i64 %21
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 8
  %25 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0), i8* %19, i32 %24)
  br label %26

26:                                               ; preds = %14
  %27 = load i64, i64* %3, align 8
  %28 = add i64 %27, 1
  store i64 %28, i64* %3, align 8
  br label %10

29:                                               ; preds = %10
  %30 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %31 = call i32 @free(%struct.TYPE_5__* %30)
  ret void
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @vkEnumerateInstanceExtensionProperties(i32*, i64*, %struct.TYPE_5__*) #1

declare dso_local %struct.TYPE_5__* @calloc(i64, i32) #1

declare dso_local i32 @free(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
